--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/Head_Lo.png">
-    <!-- Add these additional favicon links for better browser support -->
-    <link rel="shortcut icon" href="/images/Head_Lo.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/images/Head_Lo.png">
+    
+    <!-- Remove all duplicate links and use only these -->
+    <link rel="icon" type="image/x-icon" href="/images/Head_Lo.png">
+    <link rel="shortcut icon" href="/images/Head_Lo.png">
+    
     <title>Admin</title>
   </head>
   <body>
