--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Remove all duplicate links and use only these -->
-    <link rel="icon" type="image/x-icon" href="/images/Head_Lo.png">
-    <link rel="shortcut icon" href="/images/Head_Lo.png">
+    <link rel="icon" type="image/x-icon" href="/image/Head_Lo.png">
+    <link rel="shortcut icon" href="/image/Head_Lo.png">
     
     <title>Admin</title>
   </head>
